adjusted map description font size for laptops to prevent overlap

--- a/src/assets/styles/Map.css
+++ b/src/assets/styles/Map.css
@@ -9,7 +9,7 @@
 .map-mobile {
     width: 100%;
     height: auto;
-    object-fit: contain;
+    object-fit: cover;
     margin: 1% auto 0;
     display: block;
     border: 1px solid black;
@@ -75,4 +75,10 @@
 .bus-timetable {
     border-radius: 10px;
     margin: 0.2rem auto 0.8rem;
+}
+
+@media screen and (max-width: 1200px) {
+    .description-text {
+        font-size: 1rem;
+    }
 }
